# blazing-art-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  enhance_extraction.py  extract_papers.py  mcp-wrapper.sh  run-mcp.sh  test-mcp.sh
.github/workflows/: ci.yml
data/: entities.json  events.json
examples/: entities.json  events.json
k8s/: deployment.yaml
monitoring/: prometheus.yml
src/: main.rs  simple_mcp.rs
