[package]
name = "blazing-art-mcp"
version = "0.1.0"
edition = "2021"
authors = ["John Boren <john@example.com>"]
description = "⚡ Blazing-fast MCP server delivering microsecond-latency structured memory for LLMs"
license = "MIT"
repository = "https://github.com/JohnJBoren/blazing-art-mcp"
keywords = ["mcp", "memory", "llm", "server"]
categories = ["data-structures", "web-programming"]

[[bin]]
name = "blazing_art_mcp"
path = "src/simple_mcp.rs"

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Performance optimizations
mimalloc = "0.1"                    # 2-6x performance boost
parking_lot = "0.12"                # Faster mutexes

# Utilities
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
# Aggressive optimizations
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Target-specific optimizations for musl
[target."cfg(target_env = \"musl\")".dependencies]
tikv-jemallocator = "0.6"

# Development dependencies
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

# [[bench]]
# name = "art_benchmarks"
# harness = false
